2014-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, ndmp-src/ndmpconnobj.c,
	  ndmp-src/ndmpconnobj.h: Undo previous patch.
	* device-src/ndmp-device.c: ndmp_connection_wait_for_notify_with_cond
	  returning 1 is a valid result.

2014-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Call ndmp_connection_mover_get_state
	  before calling ndmp_connection_wait_for_notify_with_cond to verify
	  the mover state.
	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_get_state): Return
	  pause_reason and halt_reason
	* ndmp-src/ndmpconnobj.h (ndmp_connection_mover_get_state): Change
	  prototype.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: fix for /usr/bin/lsb_release.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Do not uncompress/decrypt if server do not
	  have fe_amrecover_receive_unfiltered.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Fix distro.

2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Take root privilege to call get_fs_usage.

2014-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Run /usr/bin/lsb_release if
	  it exist.

2014-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amcleanup.8.xml: Add amvault.
	* server-src/amcleanup.pl: Add amvault.

2014-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Fix for curl and gnutls.

2014-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Retry on MTX 'No Sense'.

2014-01-09  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c, amar-src/amar.h, perl/Amanda/Archive.pod,
	  perl/Amanda/Archive.swg: Add amar_size and
	  amar_attr_add_data_fd_in_thread
	* installcheck/Amanda_Archive.pl: Test amar_size.

2014-01-09  Jean-Louis Martineau <martineau@zmanda.com>